scrollbar fix

--- a/EnotSosal/style.css
+++ b/EnotSosal/style.css
@@ -48,8 +48,6 @@ body {
 
 
 .pnFSEGiRmI9JuhUxbfVe::-webkit-scrollbar-thumb  {
-    border: 1px solid #3d635abe !important;
-    border-radius: 10px !important;
     background-clip: content-box !important;
     min-height: 5px !important;
     background-color: #29423fab !important;
